syntax = "proto3";

package v1;

import "google/protobuf/timestamp.proto";
import "storage/image.proto";

option go_package = "./api/v1;v1";
option java_package = "io.stackrox.proto.api.v1";

// SBOMScanResponse wraps metadata and scan results for an SBOM.
// The fields are intended to be similar to those from `storage.Node` and `storage.Image`
// so that parsing scans are familiar to users.
//
// There is no service defined for this response as it is handled
// by a custom route (non-gRPC).
//
// next available tag: 3
message SBOMScanResponse {
  string id = 1;

  // next available tag: 5
  message SBOMScan {
    google.protobuf.Timestamp scan_time = 1;
    repeated storage.EmbeddedImageScanComponent components = 2;
    string operating_system = 3;
    storage.DataSource data_source = 4;
  }
  SBOMScan scan = 2;
}
